# stapel-agent

./: CHANGELOG.md  CONFIG.MD  CONTRIBUTING.md  MODULE.md  README.md  SECURITY.md  __init__.py  admin.py  apps.py  cache.py  checks.py  conf.py  conftest.py  dto.py  errors.py  functions.py  models.py  parsing.py  pyproject.toml  serializers.py  services.py  summary.py  urls.py  urls_v1.py  views.py
.github/workflows/: ci.yml  publish.yml
diarization/: __init__.py  base.py
diarization/providers/: pyannote_http.py
docs/: capabilities.json  streaming-seam.md
embeddings/: __init__.py  base.py
embeddings/providers/: http_server.py  openai_compat.py
images/: __init__.py  base.py
images/providers/: __init__.py  openai_images.py
migrations/: 0001_initial.py  0002_alter_promptlog_source.py  0003_alter_promptlog_source.py  0004_alter_promptlog_source.py  0005_alter_promptlog_source.py
providers/: __init__.py  anthropic.py  base.py  claude_cli.py  openai_compat.py
rerank/: __init__.py  base.py
rerank/providers/: deepinfra.py  http_server.py
schemas/functions/: llm.complete.json  llm.diarize.json  llm.embed.json  llm.generate_image.json  llm.rerank.json  llm.stt_catalog.json  llm.summarize.json  llm.transcribe.json  llm.translate.json
stt/: __init__.py  base.py  router.py
stt/providers/: __init__.py  assemblyai.py  deepgram.py  elevenlabs.py  gladia.py  soniox.py  speechmatics.py  whisper_http.py  xai_stt.py
tests/: fakes.py  test_api.py  test_diarization.py  test_embeddings.py  test_extension_points.py  test_functions.py  test_image_gen.py  test_images_base.py  test_models_and_admin.py  test_parsing.py  test_providers.py  test_public_api.py  test_rerank.py  test_services.py  test_stt_base.py  test_stt_biasing.py  test_stt_catalog.py  test_stt_extension_points.py  test_stt_providers.py  test_stt_providers_ported.py  test_stt_router.py  test_summarize.py  test_vision.py  urls.py
