[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-agent"
version = "0.2.0"
description = "LLM facade Django app for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "llm", "anthropic", "openai", "translation"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "stapel-core>=0.3.0,<0.4",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.34"]
all = ["stapel-agent[anthropic]"]

[tool.setuptools]
package-dir = {"stapel_agent" = "."}
packages = ["stapel_agent", "stapel_agent.images", "stapel_agent.images.providers", "stapel_agent.migrations", "stapel_agent.providers", "stapel_agent.stt", "stapel_agent.stt.providers", "stapel_agent.tests"]

[tool.setuptools.package-data]
stapel_agent = ["py.typed", "migrations/*.py", "schemas/**/*.json", "migrations/**/*.py"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"

[tool.coverage.run]
# Measure the shipped library code only: the packaged test suite, its
# conftest and the migration files are distributed for reuse but are not
# runtime code exercised by the host project.
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]
